# cubitpy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cubitpy_test_suite_with_secrets.yml
cubitpy/: conf.py  cubit_group.py  cubit_wrapper3.py  cubitpy.py  cubitpy_to_dat.py  geometry_creation_functions.py  geometry_utils.py  mesh_creation_functions.py  utils.py
cubitpy/cubit_wrapper/: cubit_wrapper_host.py
src/cubitpy/: conf.py  cubit_group.py  cubit_to_fourc_input.py  cubitpy.py  cubitpy_types.py
src/cubitpy/cubit_wrapper/: cubit_wrapper_client.py  cubit_wrapper_file_transfer.py  cubit_wrapper_host.py
src/tutorial/: tutorial.py
tests/: test_cubitpy.py  test_cubitpy_performance.py  testing.py
tests/input-files-ref/: test_dump_numpy_array.4C.yaml
tutorial/: tutorial.py
