[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "cubitpy"
authors = [
  {name = "Ivo Steinbrecher", email = "ivo.steinbrecher@unibw.de"},
]
description = "CubitPy: Utility functions and 4C related functionality for the Cubit and Coreform python interface"
readme = "README.md"
license = "MIT"
dependencies = [
  "execnet==1.9.0",
  "netCDF4",
  "numpy",
  "fourcipp"
]

dynamic = ["version"]

[tool.setuptools_scm]
version_file = "src/cubitpy/version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.urls]
Repository = "https://github.com/imcs-compsim/cubitpy/"
Issues = "https://github.com/imcs-compsim/cubitpy/issues/"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "pytest-benchmark",
  "pytest-cov",
  "deepdiff",
]

[tool.coverage.run]
omit = [
  "src/cubitpy/version.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p pytest_cov --cov-report=term --cov-report=html --cov=src/ --cov-config=.coveragerc"
